--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "astro": "^5.15.5",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.23.24",
     "lucide-react": "^0.553.0",
     "next-themes": "^0.4.6",
     "react": "^18.3.1",
